[project]
name = "contract-cancellation-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic>=2.13.0",
    "uvicorn[standard]>=0.44.0",
]
[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]

[tool.mypy]
python_executable = ".venv/bin/python"
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
disable_error_code = ["type-abstract"]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "no-name-in-module",
    "too-few-public-methods",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-many-arguments",
    "too-many-positional-arguments",
]

[tool.basedpyright]
reportAny = "none"
reportExplicitAny = "none"
include = ["src", "."]
exclude = ["**/__pycache__", ".venv"]
reportMissingImports = true

